# playground-scvkweow

./: TODO.md  techio.yml
cpp-project/: CMakeLists.txt  run.sh
cpp-project/src/enum/: example.cpp  example.h  help.cpp  main.cpp  runner_impl.h  solution.cpp  solution.h
cpp-project/src/final/: example.cpp  main.cpp  solution.cpp
cpp-project/src/optional/: example.cpp  help.cpp  main.cpp  solution.cpp
cpp-project/src/variant/: example.cpp  help.cpp  solution.cpp
markdowns/: welcome.md
markdowns/lessons/: enums.md  enums_solution.md  enums_task.md  final.md  final_solution.md  optional.md  optional_solution.md  optional_task.md  variant.md  variant_solution.md  variant_task.md
